package com.sep.vox.domain.model.rubric;

public enum RubricOwnerType {
    SYSTEM,
    SCHOOL
}
