package com.sep.vox.domain.model.rubric;

public enum RubricStatus {
    DRAFT, 
    PUBLISHED, 
    ARCHIVED
}
