package com.sep.vox.domain.model.rubric;

public enum RubricTotalScoreMethod {
    WEIGHTED_AVERAGE,
    SUM
}
